MDEV-36230 Fix SERVER port field bound check

The Port field in the system table mysql.servers has type INT(4),
which translates to Field_long.

During parsing it is parsed as ulong_num

The various bound checks check for lower bound but not upper bound. So
we fix that.